feature: Delete completed, _docs updated, Healthcheck added
